--- a/Tokoku.html
+++ b/Tokoku.html
@@ -62,7 +62,7 @@
       <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-gray-800 dark:border-gray-600 dark:text-white" />
       <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-gray-800 dark:border-gray-600 dark:text-white"></textarea>
 
-      <button onclick="kirimPesan()" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Pesan Produk</button>
+      <button onclick="kirimPesan()" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Tekan Untuk Pesan Produk!</button>
     </div>
   </section>
 
