--- a/Tokoku.html
+++ b/Tokoku.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Harga & Pemesanan - Rear OfficiaL</title>
+  <title>Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -17,19 +17,18 @@
   <header class="bg-purple-700 text-white p-6 flex justify-between items-center">
     <div>
       <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
-      <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
+      <p class="text-sm">Solusi Hosting & Bot WhatsApp</p>
     </div>
     <button onclick="toggleDarkMode()" class="bg-white text-purple-700 px-3 py-1 rounded hover:bg-purple-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600">
-      switch to gelap/terang
+      Mode Gelap/Terang
     </button>
   </header>
 
   <!-- Kalkulator Harga -->
   <section class="py-10">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-purple-800 dark:text-purple-300 mb-4">Produk Rear OfficiaL</h2>
+      <h2 class="text-xl font-semibold text-purple-800 dark:text-purple-300 mb-4">Pilih Layanan</h2>
 
-      <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
       <select id="jenisLayanan" class="w-full p-2 border rounded mb-4 dark:bg-gray-800 dark:border-gray-600 dark:text-white" onchange="ubahForm(); hitungHarga()">
         <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
         <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
@@ -40,12 +39,12 @@
 
       <div id="durasiInput" class="mb-4 hidden">
         <label for="durasi" class="block mb-1">Jumlah Hari:</label>
-        <input type="number" id="durasi" class="w-full p-2 border rounded dark:bg-gray-800 dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
+        <input type="number" id="durasi" min="1" class="w-full p-2 border rounded dark:bg-gray-800 dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
       </div>
 
       <div id="gbInput" class="mb-4 hidden">
         <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
-        <input type="number" id="jumlahGB" class="w-full p-2 border rounded dark:bg-gray-800 dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
+        <input type="number" id="jumlahGB" min="1" class="w-full p-2 border rounded dark:bg-gray-800 dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
       </div>
 
       <p id="hasilHarga" class="mt-4 font-semibold text-purple-700 dark:text-purple-300"></p>
@@ -58,22 +57,21 @@
       <h2 class="text-xl font-semibold text-purple-800 dark:text-purple-300 mb-4">Form Pemesanan</h2>
 
       <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 border rounded mb-3 dark:bg-gray-800 dark:border-gray-600 dark:text-white" />
-      <input id="email" type="email" placeholder="Email Aktif" class="w-full p-2 border rounded mb-3 dark:bg-gray-800 dark:border-gray-600 dark:text-white" />
       <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-gray-800 dark:border-gray-600 dark:text-white" />
       <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-gray-800 dark:border-gray-600 dark:text-white"></textarea>
 
-      <button onclick="kirimPesan()" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Tekan Untuk Pesan Produk!</button>
+      <button onclick="kirimPesan()" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Kirim Pemesanan via WhatsApp</button>
     </div>
   </section>
 
   <!-- Metode Pembayaran -->
   <section class="py-10 bg-purple-50 dark:bg-gray-900 border-t border-purple-200 dark:border-gray-700">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-purple-800 dark:text-purple-300 mb-4 text-center">Metode Pembayaran</h2>
+      <h2 class="text-xl font-semibold text-purple-800 dark:text-purple-300 mb-6 text-center">Metode Pembayaran</h2>
 
       <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-4 border-l-4 border-purple-500">
         <h3 class="font-bold text-purple-700 dark:text-purple-300">QRIS</h3>
-        <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Scan kode QR di bawah ini untuk membayar:</p>
+        <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Scan kode QR di bawah ini:</p>
         <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-purple-500 rounded">
       </div>
 
@@ -93,7 +91,7 @@
 
   <!-- Footer -->
   <footer class="bg-purple-100 dark:bg-gray-800 text-center py-4 text-purple-700 dark:text-purple-300">
-    <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
+    <p>&copy; 2025 Rear OfficiaL. Semua Hak Dilindungi.</p>
   </footer>
 
   <!-- Script -->
@@ -134,19 +132,11 @@
         case 'admin': totalHarga = 15000; break;
         case 'reseller': totalHarga = 7000; break;
         case 'wa':
-          if (isNaN(hari) || hari <= 0) {
-            totalHarga = 0;
-            document.getElementById('hasilHarga').innerText = '';
-            return;
-          }
+          if (isNaN(hari) || hari <= 0) return;
           totalHarga = hari * 1000;
           break;
         case 'ptero':
-          if (isNaN(gb) || gb <= 0) {
-            totalHarga = 0;
-            document.getElementById('hasilHarga').innerText = '';
-            return;
-          }
+          if (isNaN(gb) || gb <= 0) return;
           totalHarga = gb * 1000;
           break;
       }
@@ -156,19 +146,17 @@
 
     function kirimPesan() {
       const nama = document.getElementById('nama').value.trim();
-      const email = document.getElementById('email').value.trim();
       const waUser = document.getElementById('wa').value.trim();
       const catatan = document.getElementById('catatan').value.trim();
       const layanan = document.getElementById('jenisLayanan').selectedOptions[0].text;
 
-      if (!nama || !email || !waUser || totalHarga === 0) {
+      if (!nama || !waUser || totalHarga === 0) {
         alert("Lengkapi semua data dan hitung harga terlebih dahulu.");
         return;
       }
 
       const pesan = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A
 - Nama: ${nama}%0A
-- Email: ${email}%0A
 - WhatsApp: ${waUser}%0A
 - Layanan: ${layanan}%0A
 - Total Harga: ${formatRupiah(totalHarga)}%0A
@@ -191,6 +179,5 @@
 
     window.onload = ubahForm;
   </script>
-
 </body>
 </html>
