--- a/Tokoku.html
+++ b/Tokoku.html
@@ -1,73 +1,120 @@
 <!DOCTYPE html>
-<html lang="id" class="switch gelap/terang">
+<html lang="id" class="transition duration-300 scroll-smooth">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rear OfficiaL - Pemesanan Hosting</title>
+  <title>Harga & Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
   <script>
     tailwind.config = {
       darkMode: 'class',
       theme: {
         extend: {
           fontFamily: {
-            futuristic: ['Orbitron', 'sans-serif']
+            futuristic: ['"Orbitron"', 'sans-serif']
           },
-          colors: {
-            neon: '#00FFFF'
+          boxShadow: {
+            glow: '0 0 20px rgba(168, 85, 247, 0.6)'
           }
         }
       }
     }
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-black text-white font-futuristic transition duration-500">
+<body class="bg-gradient-to-br from-gray-50 to-purple-100 dark:from-gray-900 dark:to-gray-800 text-gray-800 dark:text-gray-100 transition duration-300 font-futuristic">
 
-  <header class="bg-gradient-to-r from-blue-900 to-black p-6 shadow-md flex justify-between items-center">
-    <h1 class="text-3xl font-bold text-neon">Rear OfficiaL</h1>
-    <button onclick="toggleDarkMode()" class="text-neon border border-neon px-4 py-2 rounded hover:bg-neon hover:text-black transition">Mode</button>
+  <!-- Header -->
+  <header class="bg-purple-700 text-white p-6 flex justify-between items-center shadow-lg">
+    <div>
+      <h1 class="text-3xl font-bold tracking-wide">Rear OfficiaL</h1>
+      <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
+    </div>
+    <button onclick="toggleDarkMode()" class="bg-white text-purple-700 px-4 py-2 rounded-full hover:bg-purple-200 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all duration-300 shadow-md">
+      switch to gelap/terang
+    </button>
   </header>
 
-  <main class="py-10 px-6 max-w-2xl mx-auto space-y-8">
-    <!-- Kalkulator Harga -->
-    <section class="bg-gradient-to-br from-gray-800 to-gray-900 p-6 rounded-xl shadow-xl">
-      <h2 class="text-xl mb-4">Pilih Produk:</h2>
-      <select id="jenisLayanan" class="w-full p-2 bg-black border border-neon rounded" onchange="ubahForm(); hitungHarga()">
-        <option value="pt">PT Panel - Rp25.000</option>
-        <option value="admin">Admin Panel - Rp15.000</option>
-        <option value="reseller">Reseller Panel - Rp7.000</option>
-        <option value="wa">Bot WhatsApp - Rp1.000/hari</option>
-        <option value="ptero">Pterodactyl Panel - Rp1.000/GB</option>
-      </select>
+  <!-- Kalkulator Harga -->
+  <section class="py-16">
+    <div class="container mx-auto max-w-xl px-4">
+      <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-glow border border-purple-500/30 backdrop-blur">
+        <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-6 text-center">Produk Rear OfficiaL</h2>
 
-      <div id="durasiInput" class="mt-4 hidden">
-        <label>Jumlah Hari:</label>
-        <input type="number" id="durasi" class="w-full p-2 mt-1 bg-black border border-neon rounded" oninput="hitungHarga()" />
+        <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
+        <select id="jenisLayanan" class="w-full p-3 border rounded-lg bg-opacity-70 dark:bg-gray-900 dark:border-gray-700 dark:text-white mb-4" onchange="ubahForm(); hitungHarga()">
+          <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
+          <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
+          <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
+          <option value="wa">Bot WhatsApp - Rp1.000/hari</option>
+          <option value="ptero">Panel Pterodactyl - Rp1.000/GB</option>
+        </select>
+
+        <div id="durasiInput" class="mb-4 hidden">
+          <label for="durasi" class="block mb-1">Jumlah Hari:</label>
+          <input type="number" id="durasi" class="w-full p-3 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white" oninput="hitungHarga()" />
+        </div>
+
+        <div id="gbInput" class="mb-4 hidden">
+          <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
+          <input type="number" id="jumlahGB" class="w-full p-3 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white" oninput="hitungHarga()" />
+        </div>
+
+        <p id="hasilHarga" class="mt-4 text-lg font-semibold text-purple-700 dark:text-purple-300 text-center"></p>
       </div>
+    </div>
+  </section>
 
-      <div id="gbInput" class="mt-4 hidden">
-        <label>Jumlah GB RAM:</label>
-        <input type="number" id="jumlahGB" class="w-full p-2 mt-1 bg-black border border-neon rounded" oninput="hitungHarga()" />
+  <!-- Form Pemesanan -->
+  <section class="py-16 bg-white dark:bg-gray-800 border-t dark:border-gray-700">
+    <div class="container mx-auto max-w-xl px-4">
+      <div class="bg-gradient-to-br from-purple-100 to-white dark:from-gray-800 dark:to-gray-900 p-6 rounded-xl shadow-glow">
+        <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-6 text-center">Form Pemesanan</h2>
+
+        <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-3 border rounded-lg mb-4 dark:bg-gray-900 dark:border-gray-700 dark:text-white" />
+        <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-3 border rounded-lg mb-4 dark:bg-gray-900 dark:border-gray-700 dark:text-white" />
+        <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-3 border rounded-lg mb-6 dark:bg-gray-900 dark:border-gray-700 dark:text-white"></textarea>
+
+        <button onclick="kirimPesan()" class="w-full bg-gradient-to-r from-green-500 to-green-700 text-white py-3 rounded-full font-semibold hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md">
+          Tekan Untuk Pesan Produk!
+        </button>
       </div>
+    </div>
+  </section>
 
-      <p id="hasilHarga" class="mt-4 text-neon font-bold"></p>
-    </section>
+  <!-- Metode Pembayaran -->
+  <section class="py-16 bg-purple-50 dark:bg-gray-900 border-t border-purple-200 dark:border-gray-700">
+    <div class="container mx-auto max-w-xl px-4">
+      <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-8 text-center">Metode Pembayaran</h2>
 
-    <!-- Form Pemesanan -->
-    <section class="bg-gradient-to-br from-gray-800 to-gray-900 p-6 rounded-xl shadow-xl">
-      <h2 class="text-xl mb-4">Form Pemesanan</h2>
-      <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 mb-3 bg-black border border-neon rounded" />
-      <input id="wa" type="text" placeholder="Nomor WhatsApp" class="w-full p-2 mb-3 bg-black border border-neon rounded" />
-      <textarea id="catatan" placeholder="Catatan tambahan" class="w-full p-2 mb-4 bg-black border border-neon rounded"></textarea>
-      <button onclick="kirimpesan()" class="w-full bg-neon text-black font-bold py-2 rounded hover:bg-white hover:text-neon transition">Kirim Pemesanan</button>
-    </section>
-  </main>
+      <div class="grid gap-6">
+        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
+          <h3 class="font-bold text-purple-700 dark:text-purple-300">QRIS</h3>
+          <p class="text-sm text-gray-700 dark:text-gray-300 mb-3">Scan kode QR di bawah ini untuk membayar:</p>
+          <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-purple-500 rounded-xl">
+        </div>
 
-  <footer class="text-center text-neon mt-10 border-t border-neon py-4">
-    &copy; 2025 Rear OfficiaL | Hosting Masa Depan
+        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
+          <h3 class="font-bold text-purple-700 dark:text-purple-300">DANA</h3>
+          <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
+          <button onclick="salinTeks('danaNomor')" class="mt-3 px-4 py-2 bg-purple-600 text-white rounded-full hover:bg-purple-700 text-sm">Salin</button>
+        </div>
+
+        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
+          <h3 class="font-bold text-purple-700 dark:text-purple-300">OVO</h3>
+          <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
+          <button onclick="salinTeks('ovoNomor')" class="mt-3 px-4 py-2 bg-purple-600 text-white rounded-full hover:bg-purple-700 text-sm">Salin</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-purple-100 dark:bg-gray-800 text-center py-6 text-purple-700 dark:text-purple-300 font-medium">
+    <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
 
+  <!-- Script -->
   <script>
     let totalHarga = 0;
 
@@ -86,8 +133,10 @@
 
       if (jenis === 'wa') {
         document.getElementById('durasiInput').classList.remove('hidden');
+        document.getElementById('durasi').focus();
       } else if (jenis === 'ptero') {
         document.getElementById('gbInput').classList.remove('hidden');
+        document.getElementById('jumlahGB').focus();
       }
     }
 
@@ -105,11 +154,19 @@
         case 'admin': totalHarga = 15000; break;
         case 'reseller': totalHarga = 7000; break;
         case 'wa':
-          if (isNaN(hari) || hari <= 0) { totalHarga = 0; document.getElementById('hasilHarga').innerText = ''; return; }
+          if (isNaN(hari) || hari <= 0) {
+            totalHarga = 0;
+            document.getElementById('hasilHarga').innerText = '';
+            return;
+          }
           totalHarga = hari * 1000;
           break;
         case 'ptero':
-          if (isNaN(gb) || gb <= 0) { totalHarga = 0; document.getElementById('hasilHarga').innerText = ''; return; }
+          if (isNaN(gb) || gb <= 0) {
+            totalHarga = 0;
+            document.getElementById('hasilHarga').innerText = '';
+            return;
+          }
           totalHarga = gb * 1000;
           break;
       }
@@ -128,13 +185,30 @@
         return;
       }
 
-      const pesan = `Halo Rear OfficiaL, saya ingin memesan:%0A- Nama: ${nama}%0A- WhatsApp: ${waUser}%0A- Layanan: ${layanan}%0A- Total Harga: ${formatRupiah(totalHarga)}%0A- Catatan: ${catatan || '-'}%0A%0ATerima kasih!`;
+      const pesan = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A
+- Nama: ${nama}%0A
+- WhatsApp: ${waUser}%0A
+- Layanan: ${layanan}%0A
+- Total Harga: ${formatRupiah(totalHarga)}%0A
+- Catatan: ${catatan || '-'}%0A
+%0AMohon konfirmasinya, terima kasih!`;
+
       const nomorTujuan = "6283839976528";
-      window.open(`https://wa.me/${nomorTujuan}?text=${pesan}`, '_blank');
+      const link = `https://wa.me/${nomorTujuan}?text=${pesan}`;
+      window.open(link, '_blank');
+    }
+
+    function salinTeks(id) {
+      const teks = document.getElementById(id).innerText;
+      navigator.clipboard.writeText(teks).then(() => {
+        alert(`Teks "${teks}" berhasil disalin.`);
+      }).catch(() => {
+        alert("Gagal menyalin teks.");
+      });
     }
 
     window.onload = ubahForm;
   </script>
 
 </body>
-</html>
+                                                                                                                                                  </html>
