--- a/Tokoku.html
+++ b/Tokoku.html
@@ -11,30 +11,26 @@
       theme: {
         extend: {
           colors: {
-            primary: {
-              DEFAULT: '#0f172a',
-              light: '#1e293b',
-              dark: '#0c1a2a'
-            },
-            accent: '#3b82f6'
+            primary: '#0a2540', // biru tua
+            'primary-light': '#1e3a5f',
           },
           fontFamily: {
-            sans: ['Segoe UI', 'Roboto', 'Helvetica Neue', 'sans-serif']
+            sans: ['"Segoe UI"', 'Roboto', 'Helvetica', 'Arial', 'sans-serif']
           }
         }
       }
     }
   </script>
 </head>
-<body class="bg-primary text-gray-100 dark:bg-black dark:text-gray-100 transition duration-300 font-sans">
+<body class="bg-white text-gray-900 dark:bg-primary dark:text-gray-100 transition duration-300 font-sans">
 
   <!-- Header -->
-  <header class="bg-accent text-white p-6 flex justify-between items-center shadow-lg">
+  <header class="bg-primary text-white p-6 flex justify-between items-center">
     <div>
-      <h1 class="text-2xl font-bold tracking-wide">Rear OfficiaL</h1>
+      <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
       <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
     </div>
-    <button onclick="toggleDarkMode()" class="bg-white text-accent px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition">
+    <button onclick="toggleDarkMode()" class="bg-white text-primary px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600">
       switch to gelap/terang
     </button>
   </header>
@@ -42,10 +38,10 @@
   <!-- Kalkulator Harga -->
   <section class="py-10">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-accent mb-4">Produk Rear OfficiaL</h2>
+      <h2 class="text-xl font-semibold text-primary mb-4">Produk Rear OfficiaL</h2>
 
       <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
-      <select id="jenisLayanan" class="w-full p-2 border rounded mb-4 bg-primary-light border-gray-600 text-white" onchange="ubahForm(); hitungHarga()">
+      <select id="jenisLayanan" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white" onchange="ubahForm(); hitungHarga()">
         <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
         <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
         <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
@@ -55,59 +51,59 @@
 
       <div id="durasiInput" class="mb-4 hidden">
         <label for="durasi" class="block mb-1">Jumlah Hari:</label>
-        <input type="number" id="durasi" class="w-full p-2 border rounded bg-primary-light border-gray-600 text-white" oninput="hitungHarga()" />
+        <input type="number" id="durasi" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
       </div>
 
       <div id="gbInput" class="mb-4 hidden">
         <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
-        <input type="number" id="jumlahGB" class="w-full p-2 border rounded bg-primary-light border-gray-600 text-white" oninput="hitungHarga()" />
+        <input type="number" id="jumlahGB" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
       </div>
 
-      <p id="hasilHarga" class="mt-4 font-semibold text-accent"></p>
+      <p id="hasilHarga" class="mt-4 font-semibold text-primary dark:text-blue-200"></p>
     </div>
   </section>
 
   <!-- Form Pemesanan -->
-  <section class="py-10 bg-primary-light border-t border-gray-700">
+  <section class="py-10 bg-white dark:bg-primary-light border-t dark:border-gray-600">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-accent mb-4">Form Pemesanan</h2>
+      <h2 class="text-xl font-semibold text-primary mb-4">Form Pemesanan</h2>
 
-      <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
-      <input id="email" type="email" placeholder="Email Aktif" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
-      <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
-      <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 bg-primary-light border-gray-600 text-white"></textarea>
+      <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <input id="email" type="email" placeholder="Email Aktif" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white"></textarea>
 
-      <button onclick="kirimPesan()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Tekan Untuk Pesan Produk!</button>
+      <button onclick="kirimPesan()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Tekan Untuk Pesan Produk!</button>
     </div>
   </section>
 
   <!-- Metode Pembayaran -->
-  <section class="py-10 bg-primary border-t border-gray-700">
+  <section class="py-10 bg-blue-50 dark:bg-primary border-t border-blue-200 dark:border-gray-700">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-accent mb-4 text-center">Metode Pembayaran</h2>
+      <h2 class="text-xl font-semibold text-primary mb-4 text-center">Metode Pembayaran</h2>
 
-      <div class="bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-accent">QRIS</h3>
-        <p class="text-sm text-gray-300 mb-2">Scan kode QR di bawah ini untuk membayar:</p>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-primary dark:text-blue-200">QRIS</h3>
+        <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Scan kode QR di bawah ini untuk membayar:</p>
         <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-blue-500 rounded">
       </div>
 
-      <div class="bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-accent">DANA</h3>
-        <p class="text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-primary dark:text-blue-200">DANA</h3>
+        <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
         <button onclick="salinTeks('danaNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
       </div>
 
-      <div class="bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-accent">OVO</h3>
-        <p class="text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-primary dark:text-blue-200">OVO</h3>
+        <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
         <button onclick="salinTeks('ovoNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-primary-light text-center py-4 text-accent">
+  <footer class="bg-blue-100 dark:bg-primary text-center py-4 text-primary dark:text-blue-200">
     <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
 
