--- a/Tokoku.html
+++ b/Tokoku.html
@@ -68,7 +68,7 @@
     <div class="container mx-auto max-w-xl px-4">
       <h2 class="text-xl font-semibold text-primary mb-4">Form Pemesanan</h2>
 
-      <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <input id="nama" type="text" placeholder="Username" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
       <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
       <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white"></textarea>
 
