Update Produk link to point to produk.html

--- a/Tokoku.html
+++ b/Tokoku.html
@@ -33,7 +33,7 @@
       <h1 class="text-xl font-bold">Rear OfficiaL</h1>
       <ul class="flex space-x-6">
         <li><a href="#about" class="hover:text-purple-200 transition">About</a></li>
-        <li><a href="#produk" class="hover:text-purple-200 transition">Produk</a></li>
+        <li><a href="/produk.html" class="hover:text-purple-200 transition">Produk</a></li>
         <li><a href="#harga" class="hover:text-purple-200 transition">Harga & Pemesanan</a></li>
         <li><a href="#kontak" class="hover:text-purple-200 transition">Kontak</a></li>
       </ul>
