Enhance contact info and product details in Tokoku.html
Added WhatsApp contact sections and updated product descriptions.

--- a/Tokoku.html
+++ b/Tokoku.html
@@ -6,6 +6,7 @@
   <title>Harga & Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script>
     tailwind.config = {
       darkMode: 'class',
@@ -68,13 +69,39 @@
         Bebas Promosi, Terbuka 24 Jam, Anti Promosi 18+
       </p>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Kontak Rear OfficiaL</h3>
-      <p class="text-gray-700 dark:text-gray-300 mb-4">
-        <a href="https://t.me/rearofficial" class="text-semi-purple hover:underline dark:text-purple-300">https://t.me/rearofficial</a>
-      </p>
+      <div class="flex flex-col md:flex-row gap-4 mb-4">
+        <!-- Kotak WhatsApp Utama -->
+        <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple flex-1">
+          <h4 class="font-bold text-primary dark:text-semi-purple mb-2">WhatsApp Utama</h4>
+          <div class="flex items-center justify-between">
+            <div class="flex items-center">
+              <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo WhatsApp Utama" class="w-8 h-8 rounded-full mr-3" />
+              <span class="text-gray-700 dark:text-gray-300">+6283839976528</span>
+            </div>
+            <a href="https://wa.me/6283839976528" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition">Hubungi</a>
+          </div>
+        </div>
+        <!-- Kotak WhatsApp Cadangan -->
+        <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple flex-1">
+          <h4 class="font-bold text-primary dark:text-semi-purple mb-2">WhatsApp Cadangan</h4>
+          <div class="flex items-center justify-between">
+            <div class="flex items-center">
+              <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo WhatsApp Cadangan" class="w-8 h-8 rounded-full mr-3" />
+              <span class="text-gray-700 dark:text-gray-300">+6283119987259</span>
+            </div>
+            <a href="https://wa.me/6283119987259" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition">Hubungi</a>
+          </div>
+        </div>
+      </div>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Saluran Rear OfficiaL</h3>
-      <p class="text-gray-700 dark:text-gray-300 mb-4">
-        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="text-semi-purple hover:underline dark:text-purple-300">https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u</a>
-      </p>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple mb-4">
+        <div class="flex items-center mb-2">
+          <img src="https://image2url.com/images/1760794580782-c93a275b-c9ec-4e35-9474-e5e1121f0d3d.jpeg" alt="Logo Saluran Rear OfficiaL" class="w-10 h-10 rounded-full mr-3" />
+          <h4 class="font-bold text-primary dark:text-semi-purple">Saluran WhatsApp Rear OfficiaL</h4>
+        </div>
+        <p class="text-gray-700 dark:text-gray-300 mb-2">Bergabunglah dengan saluran resmi kami untuk update terbaru, promo, dan informasi produk.</p>
+        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Gabung Saluran</a>
+      </div>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Partner Rear OfficiaL</h3>
       <p class="text-gray-700 dark:text-gray-300">
         Kami bekerja sama dengan berbagai partner untuk memberikan layanan terbaik.
@@ -87,12 +114,12 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-2xl font-semibold text-primary mb-4 dark:text-semi-purple">Produk Rear OfficiaL</h2>
       <p class="text-gray-700 dark:text-gray-300 mb-4">
-        Menyediakan vps yang memiliki performa tinggi, aktif 1 bulan dan bisa di perpanjang.
+        Menyediakan Panel pterodactyl yang memiliki performa tinggi, aktif 1 bulan dan bisa di perpanjang.
       </p>
       <p class="text-gray-700 dark:text-gray-300 mb-4">
-        Dengan akun cloud anda bisa membuat dan menjual vps. Silakan cek harga dengan tekan tombol di bawah.
+        Dengan akun Pterodactyl anda bisa membuat dan menjual bot whatsapp, bot telegram dan lainnya. Silakan cek harga dengan tekan tombol di bawah.
       </p>
-      <a href="#harga" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition">Cek Harga</a>
+      <a href="#harga" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition">Beli Produk</a>
     </div>
   </section>
 
@@ -186,45 +213,44 @@
       <!-- DANA -->
       <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple">
         <h3 class="font-bold text-primary dark:text-semi-purple">DANA</h3>
-        <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
-        <button onclick="navigator.clipboard.writeText('081269910013'); alert('Nomor disalin!');"
+        <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">083839976528</span></p>
+        <button onclick="navigator.clipboard.writeText('083839976528'); alert('Nomor disalin!');"
                 class="mt-2 px-3 py-1 bg-gradient-to-r from-semi-purple to-primary text-white rounded hover:shadow-md text-sm transition" aria-label="Salin nomor DANA">
           Salin
         </button>
       </div>
 
-      <!-- OVO -->
+     <!-- OVO -->
       <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple">
         <h3 class="font-bold text-primary dark:text-semi-purple">OVO</h3>
         <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
         <button onclick="navigator.clipboard.writeText('083839976528'); alert('Nomor disalin!');"
-                class="mt-2 px-3 py-1 bg-gradient-to-r from-semi-purple to-primary text-white rounded hover:shadow-md text-sm transition" aria-label="Salin nomor OVO">
+                class="mt-2 px-3 py-1 bg-gradient-to-r from-semi-purple to-primary text-white rounded hover:shadow-md text-sm transition" aria-label="Salin nomor DANA">
           Salin
         </button>
       </div>
-    </div>
-  </section>
 
-  <!-- Kontak Section -->
-  <section id="kontak" class="py-10 bg-gradient-to-br from-purple-50 to-white dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary-light">
-    <div class="max-w-4xl mx-auto px-4 text-center">
-      <h2 class="text-2xl font-semibold text-primary mb-4 dark:text-semi-purple">Kontak Kami</h2>
-      <p class="text-gray-700 dark:text-gray-300 mb-4">
-        Hubungi kami melalui berbagai platform untuk informasi lebih lanjut.
-      </p>
-      <div class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-4 mb-4">
-        <a href="https://wa.me/6283839976528" class="bg-gradient-to-r from-green-500 to-green-600 text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
-          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo WhatsApp" class="w-6 h-6 rounded-full mr-2" />
-          WhatsApp Utama: +6283839976528
-        </a>
-        <a href="https://t.me/rearofficial" class="bg-gradient-to-r from-blue-500 to-blue-600 text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
-          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Telegram" class="w-6 h-6 rounded-full mr-2" />
-          Telegram: t.me/rearofficial
-        </a>
-        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
-          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Chanel WA" class="w-6 h-6 rounded-full mr-2" />
-          Chanel WA
-        </a>
+             <!-- Sosial Media -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4">Ikuti Kami</h3>
+          <div class="flex justify-center md:justify-start space-x-5">
+            <a href="mailto:rearstore4@gmail.com" class="bg-white text-primary rounded-full p-3 hover:bg-purple-100 hover:-translate-y-1 transition transform shadow-lg" aria-label="Email">
+              <i class="fas fa-envelope text-xl"></i>
+            </a>
+            <a href="https://www.tiktok.com/@trilionaire.mar" target="_blank" class="bg-white text-primary rounded-full p-3 hover:bg-purple-100 hover:-translate-y-1 transition transform shadow-lg" aria-label="TikTok">
+              <i class="fab fa-tiktok text-xl"></i>
+            </a>
+            <a href="https://www.instagram.com/siapaitumarr" target="_blank" class="bg-white text-primary rounded-full p-3 hover:bg-purple-100 hover:-translate-y-1 transition transform shadow-lg" aria-label="Instagram">
+              <i class="fab fa-instagram text-xl"></i>
+            </a>
+            <a href="https://www.youtube.com/@BangMarr1" target="_blank" class="bg-white text-primary rounded-full p-3 hover:bg-purple-100 hover:-translate-y-1 transition transform shadow-lg" aria-label="YouTube">
+              <i class="fab fa-youtube text-xl"></i>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
+
+      <!-- Garis bawah dan copyright -->
+<div class="border-t border-black mt-6 pt-3 text-center">
+  <p class="text-sm text-black">&copy; 2023 Rear OfficiaL. All rights reserved.</p>
+</div>
