--- a/Tokoku.html
+++ b/Tokoku.html
@@ -103,9 +103,17 @@
         <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Gabung Saluran</a>
       </div>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Partner Rear OfficiaL</h3>
-      <p class="text-gray-700 dark:text-gray-300">
+       <p class="text-gray-700 dark:text-gray-300">
         Kami bekerja sama dengan berbagai partner untuk memberikan layanan terbaik.
       </p>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple mb-4">
+        <div class="flex items-center mb-2">
+          <img src="https://image2url.com/images/1760794580782-c93a275b-c9ec-4e35-9474-e5e1121f0d3d.jpeg" alt="Logo Saluran Rear OfficiaL" class="w-10 h-10 rounded-full mr-3" />
+          <h4 class="font-bold text-primary dark:text-semi-purple">Grub WhatsApp Nusantara🔥</h4>
+        </div>
+        <p class="text-gray-700 dark:text-gray-300 mb-2">Bergabunglah dengan grub resmi kami, banyak produk Hosting menarik disana yang pastinya terbaik dan Terpercaya. </p>
+        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Bergabung</a>
+      </div>
     </div>
   </section>
 
