--- a/Tokoku.html
+++ b/Tokoku.html
@@ -54,7 +54,7 @@
       <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Rear OfficiaL" class="w-24 h-24 rounded-full mx-auto border-4 border-white shadow-2xl" />
     </div>
     <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
-    <p class="text-sm">Solusi Hosting Terbaik Untukmu</p>
+    <p class="text-sm">Solusi Hosting Terbaik Untukmu🔥</p>
   </header>
 
   <!-- About Section -->
