Update WhatsApp group link and logo image

--- a/Tokoku.html
+++ b/Tokoku.html
@@ -108,11 +108,11 @@
       </p>
       <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple mb-4">
         <div class="flex items-center mb-2">
-          <img src="https://image2url.com/images/1760794580782-c93a275b-c9ec-4e35-9474-e5e1121f0d3d.jpeg" alt="Logo Saluran Rear OfficiaL" class="w-10 h-10 rounded-full mr-3" />
+          <img src="https://image2url.com/images/1760973491900-0bf454e6-da51-453a-ad88-403ad57b1648.jpg" alt="Logo Saluran Rear OfficiaL" class="w-10 h-10 rounded-full mr-3" />
           <h4 class="font-bold text-primary dark:text-semi-purple">Grub WhatsApp Nusantara🔥</h4>
         </div>
         <p class="text-gray-700 dark:text-gray-300 mb-2">Bergabunglah dengan grub resmi kami, banyak produk Hosting menarik disana yang pastinya terbaik dan Terpercaya. </p>
-        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Bergabung</a>
+        <a href="https://chat.whatsapp.com/FUAtpYlPpy9LWR8H1JlTCZ?mode=wwc" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Bergabung</a>
       </div>
     </div>
   </section>
