--- a/Tokoku.html
+++ b/Tokoku.html
@@ -66,8 +66,13 @@
       </p>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Grub Rear OfficiaL</h3>
       <p class="text-gray-700 dark:text-gray-300 mb-4">
-        Bebas Promosi, Terbuka 24 Jam, Anti Promosi 18+
+       Grub Roblox Join aja Yg mau Sell atau Buy seputar game roblox ya man teman
       </p>
+       <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple mb-4">
+        <div class="flex items-center mb-2">
+          <img src="https://image2url.com/images/1761237998200-21eaca7b-1b21-4f64-8c44-ad4c7147f757.jpeg" alt="Logo Saluran Rear OfficiaL" class="w-10 h-10 rounded-full mr-3" />
+          <h4 class="font-bold text-primary dark:text-semi-purple">JB REAR STORE GAG/PVB/FISHIT</h4>
+        </div>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Kontak Rear OfficiaL</h3>
       <div class="flex flex-col md:flex-row gap-4 mb-4">
         <!-- Kotak WhatsApp Utama -->
