--- a/Tokoku.html
+++ b/Tokoku.html
@@ -74,7 +74,7 @@
           <h4 class="font-bold text-primary dark:text-semi-purple">JB REAR STORE GAG/PVB/FISHIT</h4>
         </div>
          <p class="text-gray-700 dark:text-gray-300 mb-2">Bergabunglah dengan grub resmi kami, bagi mas\mbak yang mau sell atau buy seputer roblox bisa join, admin nya soft spoken dan baik </p>
-        <a href="https://chat.whatsapp.com/FiOQN642lElGIZxzHso8SRhttps://chat.whatsapp.com/FUAtpYlPpy9LWR8H1JlTCZ?mode=wwc" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Bergabung</a>
+        <a href="https://chat.whatsapp.com/FiOQN642lElGIZxzHso8SR" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition inline-block">Bergabung</a>
       </div>
       <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Kontak Rear OfficiaL</h3>
       <div class="flex flex-col md:flex-row gap-4 mb-4">
